added slack integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ deploy:
   script: lein deploy
   on:
     tags: true
+notifications:
+  slack:
+    secure: ilNqO2yGeCnunIlbLxjRpktFPugfNILBGyVKKgk3QFAQW2eWKdIR17RhOfN204nRBNTG+LKbAldOOd4tEPfHmSWzx1R/jLsFpfe56FwrtaYA3xKOJkYFnB+jthZb7HbsuTV2umQ3Z5vGB6rdiySAaXYWExchO2IDxa0T4aJfBCk=
