--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,5 @@ deploy:
 notifications:
   slack:
     secure: ilNqO2yGeCnunIlbLxjRpktFPugfNILBGyVKKgk3QFAQW2eWKdIR17RhOfN204nRBNTG+LKbAldOOd4tEPfHmSWzx1R/jLsFpfe56FwrtaYA3xKOJkYFnB+jthZb7HbsuTV2umQ3Z5vGB6rdiySAaXYWExchO2IDxa0T4aJfBCk=
+env:
+  secure: YdvZRbT3NctvCl1Kf1i0T/MZ5NOgQJ7phN6MxrPIshoLFX7hq+JEW+4HWxzC18LoZm6vZ04q5Ok9FhTssqkHh7UnttZZ5IakfGLCkEHnQ1dM4NTOf/LNaoOZtI44Ncoc3Cl2weJt5B3G/6hmm1GI69mk6tfYiNQ+8e7/rRivCgY=
